--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'editorial-base.html' %}
 
 {% block content %}
     <span class="title"><h1>{% block title %} CW WA7PGE {% endblock %}</h1></span>
