--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -9,5 +9,8 @@
             I've developed the practice resources here to help myself and others to improve their CW skills. 
 
         </p>
+        <a id="showSidebar">click</a>
     </div>
+
+
 {% endblock %}
