--- a/api/app/templates/editorial-base.html
+++ b/api/app/templates/editorial-base.html
@@ -157,19 +157,9 @@
 </html>
 <script>
 $(document).ready(function () {
-	$("#showSidebar").on("click", function () {
-		el = document.getElementById('sidebar');
-		r = el.getBoundingClientRect();
-		console.log(el)
-		console.log(r)
-		el.style.position = 'absolute'
-		console.log(el.style.position)
-		el.style.left = '0px';
-		el.style.x = '0px';
-		el.classList.remove('inactive')
-		r = el.getBoundingClientRect();
-		console.log(el)
-		console.log(r)
-	});
+	var $sidebar = $('#sidebar'),
+			$sidebar_inner = $sidebar.children('.inner');
+
 });
 </script>
+
