--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -9,7 +9,10 @@
             I've developed the practice resources here to help myself and others to improve their CW skills. 
 
         </p>
-        <a id="showSidebar">click</a>
+        <p id="pShowSidebar">
+        Here are the practice resources:<BR>    
+        <button id="showSidebar">Show Menu</button>
+        </p>
     </div>
 
 
