view/hide text on Winnie

--- a/api/app/templates/callsigns/callsign-trainer.html
+++ b/api/app/templates/callsigns/callsign-trainer.html
@@ -22,7 +22,7 @@
       text-align: right;
     }
   </style>
-  <h1>Callsign Head Copy Training</h1>
+  <h2>Callsign Trainer</h2>
   <div class="button-container">
     <button onclick="startPlayback()">Start Playing</button>
     <button class="stop-button" onclick="stopPlayback()">Stop</button>
