--- a/api/app/templates/editorial-base.html
+++ b/api/app/templates/editorial-base.html
@@ -21,6 +21,9 @@
             color: #333;
         }
 
+
+
+		
 		</style>		
 	</head>
 	<body class="is-preload">
@@ -73,7 +76,7 @@
 									<ul>
 										<li><a href="/">Home</a></li>
 										<li>
-											<span class="opener">Songs of the Ages</span>
+											<span class="opener">Song Titles</span>
 											<ul>
 												<li><a href="/phrases/song-titles">Copy Practice</a></li>
 												<li><a href="/phrases/song-titles-sending">Sending Practice</a></li>
@@ -137,10 +140,11 @@
 								</section>
 
 							<!-- Footer -->
+							 <!--
 								<footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
-
+							-->	
 						</div>
 					</div>
 
