--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -9,8 +9,9 @@
             I've developed the practice resources here to help myself and others to improve their CW skills. 
 
         </p>
+        <HR>
         <p id="pShowSidebar">
-        Here are the practice resources:<BR>    
+        <b style="font-size: 1.2em;">Practice resources:</b><BR>    
         <button id="showSidebar">Show Menu</button>
         </p>
     </div>
