--- a/api/app/templates/phrases/song-cw-titles.html
+++ b/api/app/templates/phrases/song-cw-titles.html
@@ -29,7 +29,7 @@
         }
 </script>
 <body>
-    <h1>CW Copy Practice<BR>A song title from the ages</h1>
+    <h2>Song Title Copy Practice</h2>
     <form method="POST" action="/phrases/song-titles">
         WPM: 
         <select name="wpm" id="wpm" style="width: 95px;" >
