--- a/api/app/templates/books/winnie.html
+++ b/api/app/templates/books/winnie.html
@@ -2,7 +2,9 @@
 
 
 {% block content %}
-  <h1>Winnie The Pooh CW</h1>
+
+
+  <h2>Winnie The Pooh CW</h2>
   <div class="optionContainer">
     <table style="max-width: 500px;">
     <tr>  
@@ -30,14 +32,20 @@
   </table>  
   </div>
   <div>
-    <audio id="cwPlayer" controls></audio>
-  </div>
-  <a href="https://duanemcguire.nyc3.cdn.digitaloceanspaces.com/cw-books/winnie-the-pooh/$_winnie-paginated.txt" target="_blank">View the text of Winnie the Pooh</a>
+    <audio id="cwPlayer" controls></audio><BR>
+    <button id="viewText">View the Text</button> <button id="hideText" style="visibility: hidden;">Hide the Text</button>
+ </div> 
+  <iframe id="textFrame" src="" style="width: 100%; height: 400px; visibility: hidden;" ></iframe>
+  
   <script>
     const select = document.getElementById('wpage');
     const audio = document.getElementById('cwPlayer'); 
     const wpm = document.getElementById('wpm') 
     const mp3Prefix = "https://duanemcguire.nyc3.cdn.digitaloceanspaces.com/cw-books/winnie-the-pooh/winnie-"
+    const buttonViewText = document.getElementById('viewText');
+    const buttonHideText = document.getElementById('hideText');
+    
+    const frameViewText = document.getElementById('textFrame');
     var wpmvalue = 20
     var pagevalue = ""
     for (let i = 0; i <= 123; i++) {
@@ -48,6 +56,19 @@
       option.textContent = i;
       select.appendChild(option);
     }
+    buttonViewText.addEventListener('click', function(){
+      pagevalue = select.value;
+      srcFile = "https://duanemcguire.nyc3.cdn.digitaloceanspaces.com/cw-books/winnie-the-pooh/winnie_paginated_paragraphs.html";
+      ref = srcFile + "#page" + +pagevalue;
+      console.log(ref);
+      frameViewText.src = ref;
+      frameViewText.style.visibility = 'visible';
+      buttonHideText.style.visibility = 'visible';
+  })
+      buttonHideText.addEventListener('click', function(){
+      frameViewText.style.visibility = 'hidden';
+      buttonHideText.style.visibility = 'hidden';
+  })
     select.addEventListener('change', () => {
       pagevalue = select.value;
       if (pagevalue) {
@@ -55,6 +76,10 @@
         audio.src = mp3Prefix + wpmvalue + "wpm-page-"  + pagevalue + ".mp3";
         console.log(audio.src)
         audio.play();
+        srcFile = "https://duanemcguire.nyc3.cdn.digitaloceanspaces.com/cw-books/winnie-the-pooh/winnie_paginated_paragraphs.html";
+        ref = srcFile + "#page" + +pagevalue;
+        frameViewText.src = ref;
+
       }
     })
     wpm.addEventListener('change', () => {
@@ -64,6 +89,10 @@
         audio.src = mp3Prefix + wpmvalue + "wpm-page-"  + pagevalue + ".mp3";
         console.log(audio.src)
         audio.play();
+        srcFile = "https://duanemcguire.nyc3.cdn.digitaloceanspaces.com/cw-books/winnie-the-pooh/winnie_paginated_paragraphs.html";
+        ref = srcFile + "#page" + +pagevalue;
+        frameViewText.src = ref;
+
       }
     })
 
