--- a/api/app/templates/editorial-base.html
+++ b/api/app/templates/editorial-base.html
@@ -47,6 +47,9 @@
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 									--->
+									<div class="icons">
+										<img src="/static/images/duane.png">
+									</div>
 								</header>
 
 							<!-- Content -->
