--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -14,6 +14,10 @@
         <b style="font-size: 1.2em;">Practice resources:</b><BR>    
         <button id="showSidebar">Show Menu</button>
         </p>
+        <div>
+            <img src="/static/images/begali-key.png"><BR>
+            User Interface
+        </div>
     </div>
 
 
