--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -1,12 +1,11 @@
 {% extends 'editorial-base.html' %}
 
 {% block content %}
-    <span class="title"><h1>{% block title %} CW WA7PGE {% endblock %}</h1></span>
     <div class="content">
         <p>
             <h3>Duane McGuire, WA7PGE</h3>
             I enjoy CW, and contribute to the <a href="https://longislandcwclub.org/">Long Island CW club</a> as an intermediate level instructor. 
-            I've developed the practice resources here to help myself and others to improve their CW skills. 
+            I've developed the practice resources here to help myself and others to improve their Morse Code skills. 
 
         </p>
         <HR>
@@ -14,10 +13,12 @@
         <b style="font-size: 1.2em;">Practice resources:</b><BR>    
         <button id="showSidebar">Show Menu</button>
         </p>
-        <div>
-            <img src="/static/images/begali-key.png"><BR>
-            User Interface
+        <div >
+        <img style="max-width: 100%" src="/static/images/begali-key.png"><BR>
+        User Interface
         </div>
+        
+        
     </div>
 
 
