updated cw copy phrases for categories

--- a/api/app/templates/editorial-base.html
+++ b/api/app/templates/editorial-base.html
@@ -79,7 +79,7 @@
 									<ul>
 										<li><a href="/">Home</a></li>
 										<li>
-											<span class="opener">Song Titles</span>
+											<span class="opener">Phrases</span>
 											<ul>
 												<li><a href="/phrases/song-titles">Copy Practice</a></li>
 												<li><a href="/phrases/song-titles-sending">Sending Practice</a></li>
