--- a/api/app/templates/editorial-base.html
+++ b/api/app/templates/editorial-base.html
@@ -56,6 +56,19 @@
 								<section>
                         			{% block content %} {% endblock %}
 								</section>
+								
+								<HR>
+									<h3>Comments</h3>
+									I welcome your comments.   You do NOT need to sign in to leave a comment. If you do sign in, the comment system will notify you of replies to your comment.  
+									
+									<div style="border: 2px solid  black; padding: 10px;">
+
+								<script defer src="https://commentario.pidocker.duanemcguire.com/comentario.js"></script>
+								<comentario-comments></comentario-comments>
+								</div>
+
+
+
 
 						</div>
 					</div>
