add A Childs garden of verses

--- a/api/app/templates/editorial-base.html
+++ b/api/app/templates/editorial-base.html
@@ -99,7 +99,13 @@
 											</ul>
 										</li>
 										<li><a href="/callsigns/trainer?a=1">Callsign Trainer</a></li>
-										<li><a href="/books/winnie">Winnie The Pooh</a></li>
+										<li>
+											<span class="opener">Books</span>
+											<ul>
+												<li><a href="/books/winnie">Winnie The Pooh</a></li>
+												<li><a href="/books/garden">A Childs Garden of Verses</a></li>
+											</ul>	
+										</li>			
 
 									</ul>
 								</nav>
