--- a/api/app/templates/phrases/song-titles-sending.html
+++ b/api/app/templates/phrases/song-titles-sending.html
@@ -32,7 +32,7 @@
 <hr>
 <DIV>
     Note: This page was designed for group interaction in my zoom class. Each student can have their own copy of this
-    page up in a browser window. The student can then choose a random song title to send when it is their turn to send
+    page up in a browser window. The student can then choose a random phrase to send when it is their turn to send
     CW.
 </DIV>
 
