--- a/api/app/templates/editorial-base.html
+++ b/api/app/templates/editorial-base.html
@@ -57,16 +57,7 @@
                         			{% block content %} {% endblock %}
 								</section>
 								
-								<HR>
-									<h3>Comments</h3>
-									I welcome your comments.   You do NOT need to sign in to leave a comment. If you do sign in, the comment system will notify you of replies to your comment.  
-									
-									<div style="border: 2px solid  black; padding: 10px;">
-
-								<script defer src="https://commentario.pidocker.duanemcguire.com/comentario.js"></script>
-								<comentario-comments></comentario-comments>
-								</div>
-
+								
 
 
 
@@ -78,12 +69,13 @@
 						<div class="inner">
 
 							<!-- Search -->
+							 <!---
 								<section id="search" class="alt">
 									<form method="post" action="#">
 										<input type="text" name="query" id="query" placeholder="Search" />
 									</form>
 								</section>
-
+							--->		
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -159,6 +151,18 @@
 
 																				
 									</ul>
+
+									
+
+								</section>
+								<section>
+									<header class="major">
+										<h2>Comments</h2>
+									</header>
+									I welcome your comments.<BR>
+									<a href="/#comments">Leave a comment here</a>	
+									
+
 								</section>
 
 							<!-- Footer -->
