--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -18,7 +18,18 @@
         User Interface
         </div>
         
+        <HR>
+        <h3><A name="comments">Comments</A></h3>
+        I welcome your comments.   You do NOT need to sign in to leave a comment. If you do sign in, the comment system will notify you of replies to your comment.  
         
+        
+        <div style="border: 2px solid  black; padding: 10px; ">
+
+        <script defer src="https://commentario.pidocker.duanemcguire.com/comentario.js"></script>
+        <comentario-comments></comentario-comments>
+        </div>
+        <BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
+        <BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR>
     </div>
 
 
