added more phrases

--- a/api/app/templates/index.html
+++ b/api/app/templates/index.html
@@ -14,7 +14,7 @@
         <button id="showSidebar">Show Menu</button>
         </p>
         <div >
-        <img style="max-width: 100%" src="/static/images/begali-key.png"><BR>
+        <img style="width: 200px" src="/static/images/begali-key.png"><BR>
         User Interface
         </div>
         
