--- a/api/app/templates/callsigns/callsign-trainer.html
+++ b/api/app/templates/callsigns/callsign-trainer.html
@@ -1,4 +1,4 @@
-{% extends 'editorial-base.html' %}
+{% extends 'base.html' %}
     
 {% block content %}
   <script src="/static/callsigns/js/callsign-player.js" defer></script>
