--- a/api/app/templates/base.html
+++ b/api/app/templates/base.html
@@ -24,7 +24,18 @@
 
 
 		
-		</style>		
+		</style>	
+		
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-EN9MDPGNFT"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-EN9MDPGNFT');
+		</script>
+	
 	</head>
 	<body class="is-preload">
 
@@ -83,12 +94,8 @@
 									</header>
 									<ul>
 										<li><a href="/">Home</a></li>
-										<li>
-											<span class="opener">Phrases</span>
-											<ul>
-												<li><a href="/phrases">Copy Practice</a></li>
-												<li><a href="/phrases/sending">Sending Practice</a></li>
-											</ul>
+										<li><a href="/phrases">Phrase Copy Practice</a></li>
+										<li><a href="/phrases/sending">Phrase Sending Practice</a></li>
 										</li>
 										<li><a href="/callsigns/trainer">Callsign Trainer</a></li>
 										<li>
